test/files/invalid/escape_sequence.stderr
error: Invalid escape sequence
  ┌─ test/files/invalid/escape_sequence.fbs:2:16
  │
2 │   x: string = "\xjj";
  │                ^^

Error: Bailing because of errors
